--- a/www/avaliacao.html
+++ b/www/avaliacao.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title></title>
-    <script src="scripts/jquery-2.1.4.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>-->
 </head>
 
 <body>
@@ -16,23 +16,6 @@
             <a onclick="BuscarEstabelecimento();"><i class="fa fa-search"></i></a>
         </div>
         <div class="header-clear-small"></div>
-        <!--<div class="content">
-            <div class="container no-bottom">
-                <div class="no-bottom">
-                    <div>
-                        <fieldset>
-                            <label class="input-label">Busca</label>
-                            <!--<label class="input-label">Sua moeda</label>
-                            <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento();"></select>
-                            <!--<label class="input-label">Qual procura?</label>-->
-                            <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>
-                            <!--<label class="input-label">Qual é a transação?</label>
-                            <!--<select name="" class="contactField" id="TRANSACAO"></select>
-                        </fieldset>
-                    </div>
-                </div>
-            </div>
-        </div>-->
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
@@ -45,9 +28,6 @@
                     </div>
                 </div>
             </div>
-
-            <!--<script src="scripts/jsmodel/moedas.js"></script>
-            <script src="scripts/jsmodel/transacao.js"></script>-->
             <script src="scripts/paginas/avaliacao.js"></script>
 
         </div>
