--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -12,7 +12,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a onclick="BuscarEstabelecimento();"><i class="fa fa-search"></i></a>
+            <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -37,6 +37,11 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
+                            <span>
+                                <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
+                                <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
+                                <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
+                            </span>
                             <div id="DIVESTABELECIMENTO">
 
                             </div>
