--- a/www/index.html
+++ b/www/index.html
@@ -75,11 +75,11 @@
                 </div>
             </div>
         </div>
-        <script>
+        <!--<script>
             jQuery(document).ready(function () {
                 CarregaLogin();
             })
-        </script>
+        </script>-->
     </div>
 </body>
 
