--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -22,11 +22,12 @@
                         <fieldset>
                             <label class="input-label">Busca</label>
                             <!--<label class="input-label">Sua moeda</label>-->
-                            <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento();"></select>
+                            <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento(true);"></select>
                             <!--<label class="input-label">Qual procura?</label>-->
                             <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
                             <!--<label class="input-label">Qual é a transação?</label>-->
                             <!--<select name="" class="contactField" id="TRANSACAO"></select>-->
+                            
                         </fieldset>
                     </div>
                 </div>
@@ -37,13 +38,7 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <span>
-                                <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
-                                <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
-                                <a class="open-nav" href="#"><i class="fa fa-arrow-left"></i></a>
-                            </span>
                             <div id="DIVESTABELECIMENTO">
-
                             </div>
                         </fieldset>
                     </div>
