--- a/www/registro.html
+++ b/www/registro.html
@@ -24,23 +24,17 @@
     <link href="styles/animate.css" rel="stylesheet" type="text/css">
 
     <!--SCRIPTS BASICOS-->
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <!--<script type="text/javascript" src="scripts/jquery.js"></script>-->
+    <script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
-    <script src="scripts/paginas/registro.js"></script>
-    <script src="scripts/jsmodel/moedas.js"></script>
+    <script type="text/javascript" src="scripts/paginas/registro.js"></script>
 
 </head>
 <body>
     <div id="preloader">
         <div id="status">
-            <p class="center-text">
-                Carregando...
-                <em>O carregamento depende da sua conexão!</em>
-            </p>
         </div>
     </div>
     <div id="content" class="page-content">
@@ -51,18 +45,8 @@
                 <a onclick="GravaUsuario();"><i class="fa fa-check"></i></a>
             </div>
         </div>
-        <div class="header-clear">
-
-        </div>
-        <div class="header-clear">
-            <div class="content">
-                <div class="container no-bottom">
-                    <div id="mensagem" class="static-notification-red tap-dismiss-notification" style="display:none;">
-                        <p id="txtmsg" class="center-text uppercase"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="header-clear"></div>
+        <div class="header-clear"></div>
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
