--- a/www/inicio.html
+++ b/www/inicio.html
@@ -1,4 +1,4 @@
-﻿<!--<!DOCTYPE html>-->
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -36,11 +36,7 @@
 
     <!--SCRIPTS DE PÁGINAS-->
     <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
-    <script>
-      function BloqueiaTela() {
-          jQuery.blockUI({ message: '<img src="img/LOGO_eXCHANGE_BRANCO.png" width="128" height="70" />' });
-        }
-    </script>
+
 
 </head>
 <body onload="PreparaSistema('mapa.html');">
@@ -53,25 +49,25 @@
         <div id="sidebar" class="page-sidebar">
             <div id="page_sidebar" class="page-sidebar-scroll">
                 <div class="sidebar-shortcuts">
-                    <!--<a onclick="CarregaMenu('mensagem.html')"><i class="fa fa-envelope-o"></i></a>
-                    <a onclick="CarregaMenu('favoritas.html')"><i class="fa fa-star-o"></i></a>
-                    <a onclick="CarregaMenu('amigos.html')"><i class="fa fa-users"></i></a>
-                    <a onclick="CarregaMenu('buscaramigos.html')"><i class="fa fa-search-plus"></i></a>-->
-                    <!--<a class="close-nav" href="#"><i class="fa fa-times"></i></a>-->
+                    <!--<a onclick="CarregaMenu('mensagem.html')"><i class="fa  fa-envelope-o"></i></a>
+                    <a onclick="CarregaMenu('favoritas.html')"><i class="fa  fa-star-o"></i></a>
+                    <a onclick="CarregaMenu('amigos.html')"><i class="fa  fa-users"></i></a>
+                    <a onclick="CarregaMenu('buscaramigos.html')"><i class="fa  fa-search-plus"></i></a>-->
+                    <!--<a class="close-nav" href="#"><i class="fa  fa-times"></i></a>-->
                 </div>
                 <div class="sidebar-logo">
                     <img src="img/LOGO_eXCHANGE_BRANCO.png" width="128" height="70" />
                 </div>
                 <!--<div class="navigation-item">
                     <a onclick="ClickBlock();" class="nav-item">
-                        <i class="fa fa-navicon"></i>
+                        <i class="fa  fa-navicon"></i>
                         MENU
                         <i class="fa"></i>
                     </a>
                 </div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('mapa.html')" class="nav-item">
-                        <i class="fa fa-map-marker"></i>
+                        <i class="fa  fa-map-marker"></i>
                         Mapa
                         <i class="fa"></i>
                     </a>
@@ -79,7 +75,7 @@
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('estabelecimento.html')" class="nav-item">
-                        <i class="fa fa-search"></i>
+                        <i class="fa  fa-search"></i>
                         Busca
                         <i class="fa"></i>
                     </a>
@@ -87,7 +83,7 @@
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('perfil.html')" class="nav-item">
-                        <i class="fa fa-user"></i>
+                        <i class="fa  fa-user"></i>
                         Meus Dados
                         <i class="fa"></i>
                     </a>
@@ -95,7 +91,7 @@
                 <!--<div class="sidebar-decoration"></div>-->
                 <!--<div class="navigation-item">
                     <a onclick="CarregaMenu('endereco.html')" class="nav-item">
-                        <i class="fa fa-building"></i>
+                        <i class="fa  fa-building"></i>
                         Endereço
                         <i class="fa"></i>
                     </a>
@@ -103,7 +99,7 @@
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('historico.html')" class="nav-item">
-                        <i class="fa fa-clock-o"></i>
+                        <i class="fa  fa-clock-o"></i>
                         Histórico
                         <i class="fa"></i>
                     </a>
@@ -111,7 +107,7 @@
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('avaliacao.html')" class="close-nav nav-item">
-                        <i class="fa fa-area-chart"></i>
+                        <i class="fa  fa-area-chart"></i>
                         Avaliações
                         <i class="fa"></i>
                     </a>
@@ -119,21 +115,21 @@
                 <div id="ADMINAREA">
                     <div class="navigation-item">
                         <a onclick="CarregaMenu('estabelecimentomoeda.html')" class="nav-item">
-                            <i class="fa fa-clock-o"></i>
+                            <i class="fa  fa-clock-o"></i>
                             Config. Estabelecimento
                             <i class="fa"></i>
                         </a>
                     </div>
                     <div class="navigation-item">
                         <a onclick="CarregaMenu('novoestabelecimento.html')" class="nav-item">
-                            <i class="fa fa-clock-o"></i>
+                            <i class="fa  fa-clock-o"></i>
                             Cadastra Estabelecimento
                             <i class="fa"></i>
                         </a>
                     </div>
                     <div class="navigation-item">
                         <a onclick="CarregaMenu('pefilestabelecimento.html')" class="nav-item">
-                            <i class="fa fa-clock-o"></i>
+                            <i class="fa  fa-clock-o"></i>
                             Perfil Estabelecimento
                             <i class="fa"></i>
                         </a>
@@ -143,7 +139,7 @@
                 <div id="ESTABELECIMENTO">
                     <div class="navigation-item">
                         <a onclick="CarregaMenu('estabelecimentomoeda.html')" class="nav-item">
-                            <i class="fa fa-clock-o"></i>
+                            <i class="fa  fa-clock-o"></i>
                             Config. Estabelecimento
                             <i class="fa"></i>
                         </a>
@@ -151,7 +147,7 @@
 
                     <div class="navigation-item">
                         <a onclick="CarregaMenu('pefilestabelecimento.html')" class="nav-item">
-                            <i class="fa fa-clock-o"></i>
+                            <i class="fa  fa-clock-o"></i>
                             Perfil Estabelecimento
                             <i class="fa"></i>
                         </a>
@@ -165,22 +161,22 @@
                     <br />
                 </div>
                 <div class="navigation-item">
-                    <a href="#" class="close-nav nav-item">
-                        <i class="fa fa-cog"></i>
+                    <a href="#" class="nav-item">
+                        <i class="fa  fa-cog"></i>
                         Opções
                         <i class="fa"></i>
                     </a>
                 </div>
                 <div class="navigation-item">
-                    <a href="#" class="close-nav nav-item">
-                        <i class="fa fa-envelope"></i>
+                    <a href="#" class="nav-item">
+                        <i class="fa  fa-envelope"></i>
                         Fale Conosco
                         <i class="fa"></i>
                     </a>
                 </div>
                 <div class="navigation-item">
-                    <a href="index.html" class="close-nav nav-item">
-                        <i class="fa fa-sign-out"></i>
+                    <a href="index.html" class="nav-item">
+                        <i class="fa  fa-sign-out"></i>
                         Sair
                         <i class="fa"></i>
                     </a>
