--- a/www/inicio.html
+++ b/www/inicio.html
@@ -97,18 +97,18 @@
                     </a>
                 </div>-->
                 <!--<div class="sidebar-decoration"></div>-->
-                <div class="navigation-item">
+                <!--<div class="navigation-item">
                     <a onclick="CarregaMenu('historico.html')" class="nav-item">
                         <i class="fa  fa-clock-o"></i>
                         Histórico
                         <i class="fa"></i>
                     </a>
-                </div>
+                </div>-->
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
                     <a onclick="CarregaMenu('avaliacao.html')" class="close-nav nav-item">
                         <i class="fa  fa-area-chart"></i>
-                        Avaliações
+                        Favoritos
                         <i class="fa"></i>
                     </a>
                 </div>
