--- a/www/novoestabelecimento.html
+++ b/www/novoestabelecimento.html
@@ -19,6 +19,21 @@
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
+                    <div>
+                        <fieldset>
+                            <label class="input-label">Usuário do Estabelecimento</label>
+                            <input type="text" name="contactNameField" value="" class="contactField" id="NOME" placeholder="Seu nome" required />
+                            <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required />
+                            <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
+                            <input type="password" name="contactNameField" value="" class="contactField" id="CONFIRMA_SENHA" placeholder="Confirme sua senha" required />
+                            <!--<label class="input-label">Moeda base</label>
+                    <select name="" class="contactField" id="SUA_MOEDA"></select>-->
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+            <div class="container no-bottom">
+                <div class="no-bottom">
                     <div >
                         <fieldset>
                             <label class="input-label">Cadastro de Estabelecimentos</label>
