--- a/www/mapas.html
+++ b/www/mapas.html
@@ -85,25 +85,32 @@
         function onLocationFound(e) {
             var radius = 10;// e.accuracy / 2;
 
-            if (localStorage.getItem('VIEWMAP') == undefined) {
+            if ( sessionStorage.getItem('VIEWMAP') == undefined) {
                 CarregaEstabelecimentos();
                 L.marker(e.latlng).addTo(map).bindPopup("Você está aqui!").openPopup();
                 map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
             }
             else
             {
-                var ID_ESTABELECIMENTO = localStorage.getItem('VIEWMAP');
+                var obj = sessionStorage.getItem('VIEWMAP');
+
+               
+                var id = obj.split("_");
+                var ID_ESTABELECIMENTO = id[0];
+                var SIMBOLO = id[1];
+                
+
                 var data = jQuery.parseJSON(RetornaEstabelecimentoPorId(ID_ESTABELECIMENTO, null, null));
                 if (data.length > 0) {
                     jQuery.each(data, function () {
                         if (this.LATITUDE != null && this.LONGITUDE != null) {
-                            L.marker([this.LATITUDE, this.LONGITUDE]).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + this.ID_ESTABELECIMENTO + "' class='' height='300'  weight='200' frameBorder='0'></iframe>").openPopup().fire('onMapClick');
+                            L.marker([this.LATITUDE, this.LONGITUDE]).addTo(map).bindPopup("<iframe id='FRMCONTATO' src='pg_contato.html?ID_ESTABELECIMENTO=" + this.ID_ESTABELECIMENTO + "&SIMBOLO=" + SIMBOLO + "' class='' height='250'  weight='200' frameBorder='0'></iframe>").openPopup().fire('onMapClick');
                             map.panTo(new L.LatLng(this.LATITUDE, this.LONGITUDE));
 
                         }
                     });
                 }
-                localStorage.removeItem('VIEWMAP');
+                sessionStorage.removeItem('VIEWMAP');
                 DesbloqueiaTela();
             }
         }
