--- a/www/inicio.html
+++ b/www/inicio.html
@@ -16,7 +16,7 @@
     <title>COTACAO</title>
     <!--CSS DE ESTILOS-->
 
-    <script type="text/javascript" src="cordova.js"></script>
+
 
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="styles/framework.css" rel="stylesheet" type="text/css">
@@ -26,20 +26,10 @@
     <link href="styles/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="styles/animate.css" rel="stylesheet" type="text/css">
 
-    <!--SCRIPTS BASICOS-->
-    <script src="scripts/jquery-2.1.4.js"></script>
-
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
-    <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
-
-    <!--SCRIPTS DE PÁGINAS-->
-    <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
 
 
 </head>
-<body onload="PreparaSistema('mapa.html');">
+<body onload="PreparaSistema('estabelecimento.html');">
     <!--class="snapjs-left"-->
     <div id="preloader">
         <div id="status">
@@ -56,7 +46,9 @@
                     <!--<a class="close-nav" href="#"><i class="fa  fa-times"></i></a>-->
                 </div>
                 <div class="sidebar-logo">
+                    <a onclick="CarregaMenu('estabelecimento.html')">  
                     <img src="img/LOGO_eXCHANGE_BRANCO.png" width="128" height="70" />
+                    </a>
                 </div>
                 <!--<div class="navigation-item">
                     <a onclick="ClickBlock();" class="nav-item">
@@ -187,6 +179,17 @@
 
         </div>
     </div>
+    <script type="text/javascript" src="cordova.js"></script>
+    <!--SCRIPTS BASICOS-->
+    <script src="scripts/jquery-2.1.4.js"></script>
+
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
+
+    <!--SCRIPTS DE PÁGINAS-->
+    <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
 </body>
 </html>
 
