--- a/www/inicio.html
+++ b/www/inicio.html
@@ -145,15 +145,15 @@
                         </a>
                     </div>
                 </div>
-                <div class="navigation-item">
+                <!--<div class="navigation-item">
                     <a href="#" class="nav-item">
                         <i class="fa  fa-cog"></i>
                         Opções
                         <i class="fa"></i>
                     </a>
-                </div>
+                </div>-->
                 <div class="navigation-item">
-                    <a href="#" class="nav-item">
+                    <a onclick="CarregaMenu('contato.html')" class="nav-item">
                         <i class="fa  fa-envelope"></i>
                         Fale Conosco
                         <i class="fa"></i>
@@ -175,7 +175,6 @@
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
     <script src="scripts/jquery-2.1.4.js"></script>
-
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
