--- a/www/inicio.html
+++ b/www/inicio.html
@@ -37,7 +37,7 @@
     </div>
     <div class="all-elements">
         <div id="sidebar" class="page-sidebar">
-            <div id="page_sidebar" class="page-sidebar-scroll">
+            <div id="page_sidebar" class="page-sidebar">
                 <div class="sidebar-shortcuts">
                     <!--<a onclick="CarregaMenu('mensagem.html')"><i class="fa  fa-envelope-o"></i></a>
                     <a onclick="CarregaMenu('favoritas.html')"><i class="fa  fa-star-o"></i></a>
@@ -145,22 +145,15 @@
                         </a>
                     </div>
                 </div>
-
-                <div class="sidebar-breadcrumb">
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                </div>
-                <div class="navigation-item">
+                <!--<div class="navigation-item">
                     <a href="#" class="nav-item">
                         <i class="fa  fa-cog"></i>
                         Opções
                         <i class="fa"></i>
                     </a>
-                </div>
+                </div>-->
                 <div class="navigation-item">
-                    <a href="#" class="nav-item">
+                    <a onclick="CarregaMenu('contato.html')" class="nav-item">
                         <i class="fa  fa-envelope"></i>
                         Fale Conosco
                         <i class="fa"></i>
@@ -182,7 +175,6 @@
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
     <script src="scripts/jquery-2.1.4.js"></script>
-
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
@@ -190,6 +182,8 @@
 
     <!--SCRIPTS DE PÁGINAS-->
     <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
+
+   
 </body>
 </html>
 
