--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -24,7 +24,7 @@
                             <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
                             <!--<label class="input-label">Qual é a transação?</label>-->
                             <!--<select name="" class="contactField" id="TRANSACAO"></select>-->
-                            
+
                         </fieldset>
                     </div>
                 </div>
@@ -41,14 +41,15 @@
                     </div>
                 </div>
             </div>
-            <script src="scripts/paginas/estabelecimento.js"></script>
-
+            <br />
+            <br />
         </div>
     </div>
-    <script src="scripts/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>-->
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
+    <script src="scripts/paginas/estabelecimento.js"></script>
 </body>
 
 </html>
