--- a/www/pg_contato.html
+++ b/www/pg_contato.html
@@ -95,8 +95,11 @@
         }
 
         function CarregaUltimaCotacao(data) {
-            jQuery('#VALOR_COMPRA').text('R$ ' + data[0].TAXA_COMPRA);
-            jQuery('#VALOR_VENDA').text('R$ ' + data[0].TAXA_VENDA);
+            var VALOR_VENDA = calculoVenda(data[0].TAXA_VENDA, data[0].VALOR_COTACAO).toFixed(2);
+            var VALOR_COMPRA = calculoCompra(data[0].TAXA_COMPRA, data[0].VALOR_COTACAO_COMPRA).toFixed(2);
+
+            jQuery('#VALOR_COMPRA').text('R$ ' + VALOR_COMPRA);
+            jQuery('#VALOR_VENDA').text('R$ ' + VALOR_VENDA);
         }
 
         function getUrlVars() {
@@ -154,8 +157,8 @@
         function CarregaDivCotacao(data) {
 
             var html = "<a class='contact-text' href='#'>Moeda :" + data.NOME_MOEDA + "</a>" +
-                        "<a class='contact-text' href='#'>Compra :R$ " + data.TAXA_COMPRA + "</a>" +
-                        "<a class='contact-text' href='#'>Venda :R$ " + data.TAXA_VENDA + "</a>";
+                        "<a class='contact-text' href='#'>Compra :R$ "+calculoCompra(data.TAXA_COMPRA, data.VALOR_COTACAO_COMPRA).toFixed(2)+"</a>" +
+                        "<a class='contact-text' href='#'>Venda :R$ "+calculoVenda(data.TAXA_VENDA, data.VALOR_COTACAO).toFixed(2)+"</a>";
             return html;
         }
         function CarregaDivBuscaCotacao() {
