--- a/www/inicio.html
+++ b/www/inicio.html
@@ -98,7 +98,7 @@
                 </div>-->
                 <!--<div class="sidebar-decoration"></div>-->
                 <div class="navigation-item">
-                    <a onclick="CarregaMenu('avaliacao.html')" class="close-nav nav-item">
+                    <a onclick="CarregaMenu('favoritos.html')" class="close-nav nav-item">
                         <i class="fa  fa-area-chart"></i>
                         Favoritos
                         <i class="fa"></i>
